--- a/styles/main.css
+++ b/styles/main.css
@@ -31,3 +31,8 @@ body{
 /*screenクラスのdivはdisplayプロパティにnoneをセット、画面をデフォで消して
 表示したいときだけだせる、screenのクラスがactiveになるとdisplayプロパティは
 blockになる。blockのつかいかたは？*/
+
+.pixelated {
+    -ms-interpolation-mode: nearest-neighbor;
+    image-rendering: pixelated;
+  }
