--- a/styles/main.css
+++ b/styles/main.css
@@ -4,6 +4,8 @@ body{
     background-color:black;
 }
 
+
+
 #wrapper{
     width:100vw;
     height:100vh;
@@ -11,6 +13,10 @@ body{
 
 #canvas{
     position:absolute;
+    user-select: none; /* CSS3 */
+    -moz-user-select: none; /* Firefox */
+    -webkit-user-select: none; /* Safari、Chromeなど */
+    -ms-user-select: none; /* IE10かららしい */
 }
 
 
@@ -32,6 +38,10 @@ body{
     display:none;
     z-index:10 ; 
     /*z-indexってなんだろう？*/
+    user-select: none; /* CSS3 */
+    -moz-user-select: none; /* Firefox */
+    -webkit-user-select: none; /* Safari、Chromeなど */
+    -ms-user-select: none; /* IE10かららしい */
 }
 
 #game .screen.active{
