--- a/styles/main.css
+++ b/styles/main.css
@@ -8,6 +8,13 @@ body{
     -ms-user-select: none; /* IE10かららしい */
 }
 
+head{
+    user-select: none; /* CSS3 */
+    -moz-user-select: none; /* Firefox */
+    -webkit-user-select: none; /* Safari、Chromeなど */
+    -ms-user-select: none; /* IE10かららしい */
+}
+
 
 
 #wrapper{
