--- a/styles/main.css
+++ b/styles/main.css
@@ -13,6 +13,7 @@ head{
     -moz-user-select: none; /* Firefox */
     -webkit-user-select: none; /* Safari、Chromeなど */
     -ms-user-select: none; /* IE10かららしい */
+    touch-action: none;
 }
 
 
