--- a/styles/main.css
+++ b/styles/main.css
@@ -6,6 +6,12 @@ body{
     -moz-user-select: none; /* Firefox */
     -webkit-user-select: none; /* Safari、Chromeなど */
     -ms-user-select: none; /* IE10かららしい */
+    
+}
+
+p{
+    font-family: 'DotGothic16', sans-serif;
+    color:aliceblue
 }
 
 head{
@@ -15,6 +21,7 @@ head{
     -ms-user-select: none; /* IE10かららしい */
     touch-action: none;
 }
+
 
 
 
