--- a/styles/main.css
+++ b/styles/main.css
@@ -12,6 +12,9 @@ body{
 p{
     font-family: 'DotGothic16', sans-serif;
     color:aliceblue
+    
+}
+
 }
 
 head{
@@ -40,6 +43,9 @@ head{
     -moz-user-select: none; /* Firefox */
     -webkit-user-select: none; /* Safari、Chromeなど */
     -ms-user-select: none; /* IE10かららしい */
+
+    font-smooth: never;
+    -webkit-font-smoothing : none;
 }
 
 
